Some additional features.

--- a/oauth2-auth-server/src/main/resources/application.yml
+++ b/oauth2-auth-server/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 security.oauth2.client:
-  client.client-id: solar
+  client-id: solar
   client-secret: solar
   scope: read,write
+
+spring.datasource:
+  url: jdbc:postgresql://localhost/oauth2
+  username: postgres
+  password: postgres
